manageiq/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manageiq
  labels:
    app: manageiq
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: manageiq
  template:
    metadata:
      labels:
        app: manageiq
    spec:
      containers:
      - name: manageiq
        image: manageiq/manageiq:hammer-9
        ports:
        - containerPort: 443
