manageiq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manageiq
  labels:
    app: manageiq
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: manageiq
